--- a/movies-watchlist/public/index.html
+++ b/movies-watchlist/public/index.html
@@ -8,7 +8,7 @@
       content="Web site created using create-react-app"
     />
   
-    <title>React Movie Watchlist App</title>
+    <title>React Movie Watchlist</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
